# PCL_Kinect2SDK

./: CMakeLists.txt  KinectLibfreenectSDK.files  License.txt  Readme.txt
include/: Microsoft_grabber2.h  libfreenect2grabber.h
src/: CMakeLists.txt  Microsoft_grabber2.cpp  PCL_Kinect2SDK.cpp  libfreenect2grabber.cpp
